<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_medium"
    android:background="@color/colorBackground"
    tools:context=".LoginEstacionamiento">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/estacionamiento_balmax"
        android:contentDescription="@string/app_name"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"/>

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_login"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_large"
        android:textColor="@color/colorOnSurface"/>

    <EditText
        android:id="@+id/et_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etiqueta_usuario"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:layout_marginTop="@dimen/margin_medium"/>

    <EditText
        android:id="@+id/et_contrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etiqueta_contrasena"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_marginTop="@dimen/margin_medium"/>

    <Button
        android:id="@+id/btn_iniciar_sesion"
        style="@style/Widget.App.Button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/boton_iniciar_sesion"
        android:layout_marginTop="@dimen/margin_large"/>
</LinearLayout>
