<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_medium"
    android:background="@color/colorBackground"
    tools:context=".AdministrarUsuarios">

    <TextView
        android:id="@+id/tv_titulo_administrar_usuarios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_administrar_usuarios"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        android:textColor="@color/colorOnSurface"
        android:layout_marginTop="@dimen/margin_large"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_usuarios"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/margin_medium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="@dimen/margin_medium">

        <Button
            android:id="@+id/btn_agregar_usuario"
            style="@style/Widget.App.Button"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/boton_agregar_usuario"/>

        <View
            android:layout_width="8dp"
            android:layout_height="1dp"/>

        <Button
            android:id="@+id/btn_subir_archivo"
            style="@style/Widget.App.Button"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/boton_subir_archivo"/>
    </LinearLayout>
</LinearLayout>
